# hindsight

./: .gitignore  Cargo.toml  README.md
.planning/: CAPTURE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/1/: CONTEXT.md  PLAN.md  SUMMARY.md  UAT.md
.planning/phases/2/: CONTEXT.md  PLAN.md  SUMMARY.md  UAT.md
.planning/phases/3/: CONTEXT.md  PLAN-1.md  PLAN-2.md  PLAN-3.md  SUMMARY.md  UAT.md
docs/: DESIGN.md  STATUS.md  diagrams.md
docs/decisions/: 0001-storage-location-and-archive-split.md  0002-capture-daemon-socket-activation.md  0003-normalize-event-grain.md  0004-embedder-and-gpu-scheduling.md  0005-profile-construction-mechanical.md  0006-storage-engine-sqlite.md  0007-query-interface.md  0008-secrets-scrub-index-only.md  0009-replace-prior-memory-tool.md  0010-backfill-coldstart-sweep.md  0011-hooks-and-daemon-knobs.md  0012-implementation-language-rust.md  0013-embed-delivery-hook-gpu.md  0014-incremental-ingest-and-cutover.md
src/: archive.rs  config.rs  daemon.rs  ingest.rs  main.rs  poke.rs  precompact.rs  sweep.rs  watermark.rs
src/embed/: gpu.rs  mod.rs  ollama.rs  profile.rs  status.rs
src/mcp/: mod.rs
src/normalize/: extract.rs  grain.rs  mod.rs  model.rs  parse.rs  scrub.rs
src/query/: exact.rs  keyword.rs  mod.rs  ranked.rs  resolve.rs  vector.rs
src/store/: load.rs  mod.rs  schema.rs
systemd/: hindsight-embed.service  hindsight-embed.timer  hindsight.service  hindsight.socket
tests/: embed_profile.rs  fts_search.rs  normalize.rs  sqlite_vec_linkage.rs  store_load.rs
(+17 files in other folders)
