[package]
name = "hindsight"
version = "0.1.0"
edition = "2021"
description = "Local, cross-session, cross-project memory for Claude Code: captures session transcripts before cleanup and archives them verbatim."
license = "MIT"
repository = "https://github.com/crenshawdev/hindsight"

[[bin]]
name = "hindsight"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zstd = "0.13"
sha2 = "0.10"
regex = "1"
listenfd = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.40", features = ["bundled"] }
sqlite-vec = "=0.1.9"
ureq = { version = "2", features = ["json"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
